--- a/magento2/app/design/frontend/Solwin/freego/Magento_Sales/templates/order/info/buttons.phtml
+++ b/magento2/app/design/frontend/Solwin/freego/Magento_Sales/templates/order/info/buttons.phtml
@@ -21,6 +21,26 @@
             ], function($){
                 $("#calendar_inputField").calendar({
                     buttonText:"<?php echo __('Select Date') ?>",
+                    disableFunc: function(date) {
+                        var now= new Date();
+                        if(date.getFullYear()<now.getFullYear())
+                        {
+                            return true;
+                        }
+                        if(date.getFullYear()==now.getFullYear())
+                        {
+                            if(date.getMonth()<now.getMonth())
+                            {
+                                return true;
+                            }
+                        }
+                        if(date.getMonth()==now.getMonth())
+                        {
+                            if(date.getDate()<now.getDate())
+                            {
+                                return true;
+                            }
+                        }
                 });
             });
         </script>
