--- a/magento2/app/design/frontend/Solwin/freego/Magento_Sales/templates/order/info/buttons.phtml
+++ b/magento2/app/design/frontend/Solwin/freego/Magento_Sales/templates/order/info/buttons.phtml
@@ -19,22 +19,18 @@
                 "jquery",
                 "mage/calendar"
             ], function($){
+                var min = new Date(),
+                    max = new Date();
+                min.setDate(min.getDate() + 3);
+                max.setDate(max.getDate() + 90);
                 $("#calendar_inputField").calendar({
                     buttonText: "<?php echo __('Select Date') ?>",
+                    minDate: min,
+                    maxDate: max,
                     disableFunc: function (date) {
-                        var now = new Date();
-                        if (date.getFullYear() < now.getFullYear()) {
+                        var day = date.getDay();
+                        if (day==6 || day==7) {
                             return true;
-                        }
-                        if (date.getFullYear() == now.getFullYear()) {
-                            if (date.getMonth() < now.getMonth()) {
-                                return true;
-                            }
-                        }
-                        if (date.getMonth() == now.getMonth()) {
-                            if (date.getDate() < now.getDate()) {
-                                return true;
-                            }
                         }
                     }
                 })
