--- a/magento2/app/design/frontend/Solwin/freego/Magento_Customer/layout/customer_account.xml
+++ b/magento2/app/design/frontend/Solwin/freego/Magento_Customer/layout/customer_account.xml
@@ -39,5 +39,11 @@
             </block>
         </referenceContainer>
         <move element="page.main.title" destination="content.top" before="-"/>
+        <!-- Downloadable product link -->
+        <referenceBlock name="customer-account-navigation-downloadable-products-link" remove="true"/>
+        <!-- My credit card link -->
+        <referenceBlock name="customer-account-navigation-my-credit-cards-link" remove="true"/>
+        <!-- Billing agreement link -->
+        <referenceBlock name="customer-account-navigation-billing-agreements-link" remove="true"/>
     </body>
 </page>
