--- a/magento2/app/design/frontend/Solwin/freego/Magento_Sales/templates/order/info/buttons.phtml
+++ b/magento2/app/design/frontend/Solwin/freego/Magento_Sales/templates/order/info/buttons.phtml
@@ -12,57 +12,62 @@
         float: left;
     }
     #callendar-schedule{
-        display: none;
+
         float:left;
     }
     .schedule{
+        display: none;
         min-height: 40px;
+        clear: left;
     }
 </style>
-<div class="schedule">
-    <label class="schedule-label"><?php echo __('Schedule your current order in the future')?></label>
-    <button id="schedule-order" type="submit" title="Add to Cart" class="action tocart primary">
-        <span><?php echo __('Schedule Order')?></span>
-    </button>
-    <div id="callendar-schedule">
-        <input type="text" class="input-text required-entry" id="calendar_inputField" name="calendar_inputField" aria-required="true" >
-        <script>
-            require([
-                "jquery",
-                "mage/calendar"
-            ], function($){
-                var min = new Date(),
-                    max = new Date();
-                min.setDate(min.getDate() + 3);
-                max.setDate(max.getDate() + 90);
-                $("#calendar_inputField").calendar({
-                    buttonText: "<?php echo __('Select Date') ?>",
-                    minDate: min,
-                    maxDate: max,
-                    disableFunc: function (date) {
-                        var day = date.getDay();
-                        if (day==1 || day==7) {
-                            return true;
-                        }
-                    }
-                })
-            });
-        </script>
-
-    </div>
+<?php  $_order = $block->getOrder() ?>
+<form id="order-schedule" action="<?php $block->getUrl('appointment/schedule')?>">
+    <p><label class="schedule-label"><?php echo __('Click here to schedule you Reorder')?></label></p>
     <script>
         require([
             "jquery"
         ], function($){
-            $(document).on('click', '#schedule-order', function(){
-                $('#callendar-schedule').toggle(300);
+            $(document).on('click', '.schedule-label', function(){
+                $('#schedule-order').toggle(300);
             });
         });
     </script>
-</div>
-<div class="actions">
-    <?php  $_order = $block->getOrder() ?>
+    <div class="schedule">
 
+        <div id="callendar-schedule">
+            <input type="hidden" class="input-text" id="schedule_order_id" name="order_id" value="<?php echo $_order->getId()?>" aria-required="true" >
+            <input type="text" class="input-text required-entry" id="calendar_inputField" name="calendar_inputField" aria-required="true" >
+            <script>
+                require([
+                    "jquery",
+                    "mage/calendar"
+                ], function($){
+                    var min = new Date(),
+                        max = new Date();
+                    min.setDate(min.getDate() + 3);
+                    max.setDate(max.getDate() + 90);
+                    $("#calendar_inputField").calendar({
+                        buttonText: "<?php echo __('Select Date') ?>",
+                        minDate: min,
+                        maxDate: max,
+                        disableFunc: function (date) {
+                            var day = date.getDay();
+                            if (day==1 || day==7) {
+                                return true;
+                            }
+                        }
+                    })
+                });
+            </script>
+        </div>
+        <button id="schedule-order" type="submit" title="Schedule Reorder" class="action tocart primary">
+            <span><?php echo __('Schedule Reorder')?></span>
+        </button>
+
+    </div>
+</form>
+<div class="actions">
     <?php if ($this->helper('Magento\Sales\Helper\Reorder')->canReorder($_order->getEntityId())) : ?>
         <a href="#" data-post='<?php /* @escapeNotVerified */ echo
         $this->helper(\Magento\Framework\Data\Helper\PostHelper::class)
