--- a/magento2/app/design/frontend/Solwin/freego/Magento_Sales/templates/order/info/buttons.phtml
+++ b/magento2/app/design/frontend/Solwin/freego/Magento_Sales/templates/order/info/buttons.phtml
@@ -8,7 +8,7 @@
 
 ?>
 <style>
-    .schedule-label, #schedule-order{
+    .schedule-label{
         color: #f2703e;
     }
     #callendar-schedule{
@@ -19,6 +19,10 @@
         min-height: 40px;
         clear: left;
     }
+    #order-schedule{
+        margin-bottom: 5px;
+        border-bottom: 1px solid #f2703e;
+    }
 </style>
 <?php  $_order = $block->getOrder() ?>
 <form id="order-schedule" action="<?php echo $block->getUrl('appointment/set/schedule')?>">
@@ -28,7 +32,7 @@
             "jquery"
         ], function($){
             $(document).on('click', '.schedule-label', function(){
-                $('.schedule').toggle(300);
+                $('.schedule').slideToggle(500);
             });
         });
     </script>
