--- a/magento2/app/design/frontend/Solwin/freego/Magento_Sales/templates/order/info/buttons.phtml
+++ b/magento2/app/design/frontend/Solwin/freego/Magento_Sales/templates/order/info/buttons.phtml
@@ -24,9 +24,21 @@
         border-bottom: 1px solid #f2703e;
     }
 </style>
-<?php  $_order = $block->getOrder() ?>
+<?php  $_order       = $block->getOrder() ?>
+<?php  $schedule     = $_order->getScheduledAppointment() ?>
+<?php  $scheduleDate = $schedule->getId() ? $schedule->getNextDate() : '' ?>
 <form id="order-schedule" action="<?php echo $block->getUrl('appointment/set/schedule')?>">
-    <p><label class="schedule-label"><strong><?php echo __('Click here to schedule your Reorder')?></strong></label></p>
+    <p>
+        <?php if($schedule->getId()):?>
+            <label class="schedule-label">
+                <strong><?php echo __('You have a scheduled Reorder. Click here to edit it.')?></strong>
+            </label>
+        <?php else:?>
+            <label class="schedule-label">
+                <strong><?php echo __('Click here to schedule your Reorder')?></strong>
+            </label>
+        <?php endif;?>
+    </p>
     <script>
         require([
             "jquery"
@@ -40,7 +52,7 @@
 
         <div id="callendar-schedule">
             <input type="hidden" class="input-text" id="schedule_order_id" name="order_id" value="<?php echo $_order->getId()?>" aria-required="true" >
-            <input type="text" placeholder="Click to select date" class="input-text required-entry" id="calendar_inputField" name="calendar_inputField" aria-required="true" >
+            <input type="text" value="<?php echo $scheduleDate ?>" placeholder="Click to select date" class="input-text required-entry" id="calendar_inputField" name="calendar_inputField" aria-required="true" >
             <script>
                 require([
                     "jquery",
