--- a/magento2/app/code/Petshop/Appointment/view/frontend/templates/account/list.phtml
+++ b/magento2/app/code/Petshop/Appointment/view/frontend/templates/account/list.phtml
@@ -1,8 +1,7 @@
 <?php
     $scheduledOrders = $block->getScheduledOrders();
 ?>
-aaaa
-
+<?php if(count($scheduledOrders)):?>
     <table>
         <thead></thead>
         <tbody>
@@ -15,4 +14,6 @@ aaaa
         <?php endforeach;?>
         </tbody>
     </table>
-
+<?php else:?>
+    <p><?php echo __('You have no scheduled orders')?></p>
+<?php endif;?>
