list schedules improvements

--- a/magento2/app/code/Petshop/Appointment/view/frontend/templates/account/list.phtml
+++ b/magento2/app/code/Petshop/Appointment/view/frontend/templates/account/list.phtml
@@ -18,7 +18,7 @@
         </thead>
         <tbody>
         <?php foreach ($scheduledOrders as $schedule):?>
-            <tr>
+            <tr><?php print_r($schedule->getData()); exit;?>
                 <td><?php echo $schedule->getCreatedAt()?></td>
                 <td><?php echo $schedule->getNextDate()?></td>
                 <td><a href="<?php $block->getUrl('/sales/order/view/order_id' . $schedule->getOrderId())?>"><?php echo $schedule->getOrderIncrementId()?></a></td>
