list schedules improvements

--- a/magento2/app/code/Petshop/Appointment/view/frontend/templates/account/list.phtml
+++ b/magento2/app/code/Petshop/Appointment/view/frontend/templates/account/list.phtml
@@ -2,7 +2,7 @@
     $scheduledOrders = $block->getScheduledOrders();
 ?>
 <style>
-    .list-schedules th>td{
+    .list-schedules thead td{
         color: #f48256;
         font-weight: 600;
     }
