--- a/magento2/app/design/frontend/Solwin/freego/Magento_Customer/layout/customer_account.xml
+++ b/magento2/app/design/frontend/Solwin/freego/Magento_Customer/layout/customer_account.xml
@@ -52,5 +52,7 @@
         <referenceBlock name="customer-account-navigation-my-credit-cards-link" remove="true"/>
         <!-- Billing agreement link -->
         <referenceBlock name="customer-account-navigation-billing-agreements-link" remove="true"/>
+
+        <referenceBlock name="sidebar.main.account_nav" remove="true"/>
     </body>
 </page>
